# market_data

./: .env.example  .gitignore  .gitmodules  Dockerfile  Jenkinsfile_bonds  Jenkinsfile_daily_cpc  Jenkinsfile_daily_eoddata  Jenkinsfile_daily_finviz  Jenkinsfile_daily_yahoo  Jenkinsfile_etf_info  Jenkinsfile_etfcom_fundflow  Jenkinsfile_finra  Jenkinsfile_fred  Jenkinsfile_monthly  README.md  __init__.py  backfill_yahoo_history.py  cleanup.py  cleanup_etf_daily.py  db.py  docker-compose.yml  install_jenkins.txt  notes.py  pyproject.toml  report_daily.py  report_finviz.py  scrap_all_stocks.py  scrap_alpha_vantage_history.py  scrap_bonds_bi.py  scrap_bonds_finra.py  scrap_cobe_put_call_ratio.py  scrap_eoddata.py  scrap_etf_info.py  scrap_etfcom_fundflow.py  scrap_finviz_screener.py  scrap_fred.py  scrap_macrotrends_history.py  scrap_short_finra.py  scrap_sp500_wiki.py  scrap_utils.py  (+3 more)
docker/postgres/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: DataTable.tsx  Layout.tsx  PriceChart.tsx
frontend/src/pages/: Bonds.tsx  Dashboard.tsx  Earnings.tsx  Macro.tsx  Reconciled.tsx  TickerDetail.tsx
migrations/: 002_trim_ticker_spaces.sql
obsoleted/: README.md
src/mdata/: __init__.py  cli.py  config.py  db.py  ingest.py  reconcile.py
src/mdata/api/: __init__.py  main.py
src/mdata/api/routes/: __init__.py  bonds.py  earnings.py  fundflow.py  macro.py  prices.py  snapshot.py  sources.py  tickers.py
