[project]
name = "market-data"
version = "0.3.0"
description = "Stock market data scrapers + Postgres storage + FastAPI viewer"
requires-python = ">=3.11"
dependencies = [
    # HTTP / scraping
    "requests>=2.32",
    "cloudscraper>=1.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "html5lib>=1.1",
    "playwright>=1.40",
    # data
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-datareader>=0.10",
    "mplfinance>=0.12",
    "scipy>=1.13",
    "tqdm>=4.66",
    # data sources
    "fredapi>=0.5",
    "finvizfinance>=0.14",
    "yfinance>=0.2.40",
    "yahooquery>=2.3",
    "alpha-vantage>=2.3",
    "junit-xml>=1.9",
    # database + web service
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.12",
]

[project.scripts]
mdata = "mdata.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdata", "market_data"]

[tool.hatch.build.targets.wheel.sources]
"market_data" = "market_data"

[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
line-length = 110
target-version = "py311"
